kubernetes/k8smanifests.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: coinprice
  labels:
    name: coinprice
---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coinprice-server
  namespace: coinprice
  labels:
    app: coinprice-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coinprice-server
  template:
    metadata:
      labels:
        app: coinprice-server
    spec:
      serviceAccountName: coinprice-server-sa
      containers:
      - name: coinprice-server
        image: us-central1-docker.pkg.dev/devops-demo-coinprice/devops-example-coinprice/coinprice-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /bitcoin
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /bitcoin
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 15
---
# service
apiVersion: v1
kind: Service
metadata:
  name: coinprice-service
  namespace: coinprice
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: coinprice-server
---
# networkpolicy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: coinprice-network-policy
  namespace: coinprice
spec:
  podSelector:
    matchLabels:
      app: coinprice-server
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - port: 5000
  egress:
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
